# jellofin-rs

./: ARCHITECTURE.md  CONFIG-NOTES.md  Cargo.toml  README.md  project-plan.md  test-config.yaml
Documentation/: ARCHITECTURE.md  PLAN.md  notflix-openapi.json  project-plan.md
src/: config.rs  imageresize.rs  lib.rs  middleware.rs  server.rs
src/collection/: collection.rs  image.rs  item.rs  mod.rs  nfo.rs  parse_filename.rs  repo.rs  scanner.rs  search.rs  sort_name.rs
src/db/: mod.rs  model.rs  repo.rs  schema.sql  sqlite.rs
src/jellyfin/: auth.rs  branding.rs  device.rs  filter.rs  genre.rs  genres.rs  handlers.rs  item.rs  items.rs  jellyfin.rs  jfitem.rs  library.rs  localization.rs  metadata.rs  mod.rs  movie.rs  pagination.rs  person.rs  playlist.rs  session.rs  show.rs  sort.rs  streaming.rs  studio.rs  system.rs  types.rs  user.rs  userdata.rs  video.rs
src/notflix/: go_handlers.rs  go_types.rs  handlers.rs  mod.rs  proxy.rs  types.rs
src/util/: generate_id.rs  imageresize.rs  mod.rs  query.rs
