[package]
name = "jellofin-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jellofin-server"
path = "src/bin/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "compression-gzip", "fs"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
regex = "1"
tantivy = "0.22"
image = "0.25"
sha2 = "0.10"
hex = "0.4"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
